--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Widgets</string>
     <string name="this_is_some_random_text">This is some random text.</string>
+    <string name="button1">Like</string>
+    <string name="button2">Dislike</string>
 </resources>
